--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Freewall</title>
+    <title>Floppy Test</title>
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
