--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <div id="app">Server Running</div>
+    <div id="app"></div>
+    <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
